--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -1,7 +1,7 @@
 {
   "header": {
     "new-habit": "new habit",
-    "edit": "edit",
+    "edit-habit": "edit habit",
     "settings": "settings",
     "report-issue": "report issue"
   },
@@ -12,6 +12,18 @@
     "edit": "edit",
     "add": "add",
     "add-occurrence": "add occurrence"
+  },
+  "habit-editor": {
+    "name": "name",
+    "category": "category",
+    "goal-hours": "hours",
+    "goal-minutes": "minutes",
+    "goal-frequency": "frequency",
+    "frequency": {
+      "daily": "daily",
+      "weekly": "weekly",
+      "monthly": "monthly"
+    }
   },
   "occurrence": {
     "start-date": "start date",
